# break-assistant

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  PROJECT_SUMMARY.md  README.md  RELEASE_DESCRIPTION.md  TESTING_GUIDE.md  break-assistant-1.0.0-1.fc41.noarch.rpm  break-assistant.spec  break-assistant_1.0.0_amd64.deb  build_all.py  build_all_linux.py  build_appimage.py  build_deb.py  build_macos.py  build_rpm.py  build_rpm_final.py  build_rpm_simple.py  build_windows.py  create_icon.py  debug_settings.py  documentation.txt  pyproject.toml  roadmap.txt  setup.py  test_app.py  test_timeline.py  timeline.json
build_appimage/: break-assistant.spec
build_appimage/Break-Assistant.AppDir/: .DirIcon  AppRun  break-assistant.desktop
build_appimage/Break-Assistant.AppDir/break-assistant/_internal/: libXft.so.2  libexpat.so.1  libgcc_s.so.1  libglib-2.0.so.0  libgomp.so.1  libgthread-2.0.so.0  liblzma.so.5  libstdc++.so.6
build_appimage/Break-Assistant.AppDir/break-assistant/_internal/_tcl_data/: auto.tcl  init.tcl
build_appimage/Break-Assistant.AppDir/break-assistant/_internal/numpy-2.3.1.dist-info/: RECORD
build_deb/: break-assistant-1.0.0.deb
build_deb/break-assistant-1.0.0/DEBIAN/: control
build_deb/break-assistant-1.0.0/usr/share/break-assistant/: README.md  requirements.txt
build_deb/break-assistant-1.0.0/usr/share/break-assistant/docs/: SCREENSHOT_PLAN.md  developer_guide.md  user_manual.md
build_rpm/break-assistant-1.0.0/: LICENSE
build_rpm/break-assistant-1.0.0/docs/: developer_guide.md  user_manual.md
build_rpm/break-assistant-1.0.0/src/: main.py
build_rpm/break-assistant-1.0.0/src/controllers/: app_controller.py  timer_controller.py
build_rpm/break-assistant-1.0.0/src/models/: settings.py  timeline_manager.py
build_rpm/break-assistant-1.0.0/src/utils/: audio.py
build_rpm/break-assistant-1.0.0/src/views/: break_popup.py  main_window.py  preferences_page.py  timeline_page.py
docs/: developer_guide.md  user_manual.md
resources/icons/: icon.icns
resources/themes/: dark.json  light.json  system.json
src/: __init__.py  main.py  settings_page.py
src/controllers/: __init__.py  app_controller.py
src/models/: timeline_manager.py  timer.py
src/utils/: audio.py  platform.py
src/views/: __init__.py  break_popup.py  help_page.py  main_window.py  preferences_page.py  timeline_page.py
temp_rpm_build/break-assistant-1.0.0/: README.md
temp_rpm_build/break-assistant-1.0.0/docs/: api_reference.md  user_manual.md
temp_rpm_build/break-assistant-1.0.0/src/: settings_page.py
temp_rpm_build/break-assistant-1.0.0/src/controllers/: app_controller.py
temp_rpm_build/break-assistant-1.0.0/src/models/: break_manager.py  settings.py  timeline_manager.py
temp_rpm_build/break-assistant-1.0.0/src/utils/: platform.py
temp_rpm_build/break-assistant-1.0.0/src/views/: break_popup.py  help_page.py  main_window.py  preferences_page.py
tests/: conftest.py
tests/integration/: test_app_controller.py  test_timeline_integration.py
tests/ui/: test_main_window.py  test_timeline_ui.py
tests/unit/: test_settings.py  test_timeline_manager.py  test_timer.py
(+9 files in other folders)
